migrated to uv/ruff

--- a/src/notebooks/01-tracking_quickstart.ipynb
+++ b/src/notebooks/01-tracking_quickstart.ipynb
@@ -63,7 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NOTE: review the links mentioned above for guidance on connecting to a managed tracking server, such as the Databricks Managed MLflow\n",
+    "# NOTE: review the links mentioned above for guidance on connecting to a managed tracking server,\n",
+    "# such as the Databricks Managed MLflow\n",
     "\n",
     "mlflow.set_tracking_uri(uri=\"http://localhost:5000\")"
    ]
