--- a/src/notebooks/02-diabetes-model.ipynb
+++ b/src/notebooks/02-diabetes-model.ipynb
@@ -45,21 +45,17 @@
     "\n",
     "%load_ext skip_kernel_extension\n",
     "\n",
-    "from typing import Dict\n",
     "import os\n",
-    "import json\n",
-    "\n",
     "import random\n",
-    "import requests\n",
     "\n",
     "import mlflow\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
+    "import scrapbook as sb\n",
     "from mlflow import MlflowClient\n",
     "from sklearn import datasets\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -76,7 +72,6 @@
    "execution_count": null,
    "id": "6",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "parameters"
     ]
@@ -123,7 +118,8 @@
     "model_name = \"diabetes-model\"\n",
     "\n",
     "mlflow_client = MlflowClient(\n",
-    "    tracking_uri=os.getenv(\"MLFLOW_TRACKING_URI\"), registry_uri=os.getenv(\"MLFLOW_TRACKING_URI\")\n",
+    "    tracking_uri=os.getenv(\"MLFLOW_TRACKING_URI\"),\n",
+    "    registry_uri=os.getenv(\"MLFLOW_TRACKING_URI\"),\n",
     ")\n",
     "\n",
     "mlflow.set_tracking_uri(uri=os.getenv(\"MLFLOW_TRACKING_URI\"))\n",
@@ -148,7 +144,10 @@
    "outputs": [],
    "source": [
     "def compare_metrics(\n",
-    "    client: MlflowClient, current_run_id: str, baseline_run_id: str, metrics_to_compare: Dict[str, str]\n",
+    "    client: MlflowClient,\n",
+    "    current_run_id: str,\n",
+    "    baseline_run_id: str,\n",
+    "    metrics_to_compare: dict[str, str],\n",
     "):\n",
     "    \"\"\"\n",
     "    Compare the performance of two runs based on given metrics.\n",
@@ -157,12 +156,15 @@
     "        client (object): Client object to interact with the system.\n",
     "        current_run_id (str): ID of the current run.\n",
     "        baseline_run_id (str): ID of the baseline run.\n",
-    "        metrics_to_compare (dict): Dictionary of metrics to compare, where each key is a metric name and its value is a string indicating whether \"higher\" or \"lower\" performance is better.\n",
+    "        metrics_to_compare (dict): Dictionary of metrics to compare, where each key is a\n",
+    "                                   metric name and its value is a string indicating whether\n",
+    "                                   \"higher\" or \"lower\" performance is better.\n",
     "\n",
     "    Returns:\n",
-    "        dict: A dictionary containing boolean values for each metric in `metrics_to_compare`, indicating whether the current run performed better than the baseline run.\n",
-    "    \"\"\"\n",
+    "        dict: A dictionary containing boolean values for each metric in `metrics_to_compare`,\n",
+    "            indicating whether the current run performed better than the baseline run.\n",
     "\n",
+    "    \"\"\"\n",
     "    # Get the metrics data from the runs\n",
     "    current_run = client.get_run(current_run_id)\n",
     "    baseline_run = client.get_run(baseline_run_id)\n",
@@ -171,7 +173,7 @@
     "    baseline_metrics = baseline_run.data.metrics\n",
     "\n",
     "    # Initialize a dictionary to store the comparison results\n",
-    "    improvement = {metric: False for metric in metrics_to_compare}\n",
+    "    improvement = dict.fromkeys(metrics_to_compare, False)\n",
     "\n",
     "    # Compare each metric\n",
     "    for metric, direction in metrics_to_compare.items():\n",
@@ -193,6 +195,7 @@
     "\n",
     "    Returns:\n",
     "        str: A string with the name in lowercase, containing an adjective and noun, followed by a 3-digit suffix.\n",
+    "\n",
     "    \"\"\"\n",
     "    adjectives = [\n",
     "        \"Transonic\",\n",
@@ -330,9 +333,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "latest_run = None\n",
@@ -368,11 +369,9 @@
     "min_samples_leaf_range = (1, 100)\n",
     "\n",
     "max_search_attempts = 5\n",
-    "import scrapbook as sb\n",
     "\n",
     "# Create a parent run for all the attempts\n",
     "with mlflow.start_run(run_name=generate_random_run_name()) as parent_run:\n",
-    "\n",
     "    # Enable MLflow's automatic experiment tracking for scikit-learn\n",
     "    mlflow.sklearn.autolog(log_models=False)  # Model is logged separately below\n",
     "\n",
@@ -509,7 +508,10 @@
     "from ipywidgets import Checkbox\n",
     "\n",
     "skip_inference = Checkbox(\n",
-    "    value=os.environ[\"SKIP_INFERENCE\"].lower() == \"true\", description=\"Skip inference\", disabled=False, indent=False\n",
+    "    value=os.environ[\"SKIP_INFERENCE\"].lower() == \"true\",\n",
+    "    description=\"Skip inference\",\n",
+    "    disabled=False,\n",
+    "    indent=False,\n",
     ")\n",
     "\n",
     "skip_inference"
@@ -636,9 +638,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "28",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset = datasets.load_diabetes()\n",
@@ -658,12 +658,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "30",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%skip $skip_inference.value\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "import requests\n",
     "\n",
     "# select random row\n",
     "row = diabetes_result.sample().iloc[0].to_list()  # Select a random row from the dataset\n",
@@ -671,6 +673,7 @@
     "response = requests.post(\n",
     "    f\"{model_server_url}/invocations\",\n",
     "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": [row]}},\n",
+    "    timeout=5,\n",
     ")\n",
     "\n",
     "print(json.dumps(response.json(), indent=4))"
@@ -680,9 +683,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "31",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%skip $skip_inference.value\n",
