--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -17,14 +17,12 @@
    "source": [
     "import time\n",
     "\n",
+    "from dagster_graphql import DagsterGraphQLClient, DagsterGraphQLClientError\n",
+    "\n",
     "from dagster import DagsterRunStatus\n",
-    "from dagster_graphql import DagsterGraphQLClient\n",
-    "from dagster_graphql import DagsterGraphQLClientError\n",
     "\n",
     "\n",
     "# Function to wait for completion\n",
-    "\n",
-    "\n",
     "def wait_for_job_completion(run_id, timeout=3600, poll_interval=5):\n",
     "    start_time = time.time()\n",
     "\n",
@@ -37,32 +35,37 @@
     "            status = client.get_run_status(run_id)\n",
     "            if status == DagsterRunStatus.SUCCESS:\n",
     "                return True, status\n",
-    "            elif status in [DagsterRunStatus.FAILURE, DagsterRunStatus.CANCELED]:\n",
+    "            if status in [DagsterRunStatus.FAILURE, DagsterRunStatus.CANCELED]:\n",
     "                return False, status\n",
-    "            else:\n",
-    "                print(f\"Job status: {status}. Waiting...\")\n",
-    "                time.sleep(poll_interval)\n",
+    "            print(f\"Job status: {status}. Waiting...\")\n",
+    "            time.sleep(poll_interval)\n",
     "\n",
     "        except DagsterGraphQLClientError as exc:\n",
     "            print(f\"Error checking job status: {exc}\")\n",
-    "            raise exc\n",
+    "            raise\n",
     "\n",
     "\n",
-    "def wait_until_model_ready(model_server_url, max_retries=10, timeout=15):\n",
-    "    \"\"\"Wait until the model is ready\"\"\"\n",
+    "def wait_until_model_ready(model_server_url, model_name, max_retries=10, timeout=5, initial_delay=5) -> None:\n",
+    "    \"\"\"Wait until the model is ready.\"\"\"\n",
+    "\n",
+    "    # Initial delay to allow model server to start\n",
+    "    print(f\"Waiting for {initial_delay} seconds for model server to start...\")\n",
+    "    time.sleep(initial_delay)\n",
+    "\n",
     "    retry_count = 0\n",
     "    while retry_count < max_retries:\n",
-    "        response = requests.get(f\"{model_server_url}/v2/models/diabetes-model/ready\")\n",
-    "        if response.status_code == 200:\n",
+    "        try:\n",
+    "            response = requests.get(f\"{model_server_url}/v2/models/{model_name}/ready\")\n",
+    "            response.raise_for_status()  # Raise an exception for bad status codes\n",
     "            print(\"Ready\")\n",
     "            break\n",
-    "        else:\n",
-    "            print(\"Not ready, retrying in {} seconds\".format(timeout))\n",
-    "            time.sleep(timeout)\n",
-    "            retry_count += 1\n",
-    "    else:\n",
-    "        print(\"Model is not ready after {} retries\".format(max_retries))\n",
-    "\n"
+    "        except requests.exceptions.RequestException as e:\n",
+    "            if retry_count == max_retries - 1:\n",
+    "                print(f\"Model is not ready after {max_retries} retries: {e}\")\n",
+    "            else:\n",
+    "                print(f\"Not ready, retrying in {timeout} seconds: {e}\")\n",
+    "        time.sleep(timeout)\n",
+    "        retry_count += 1"
    ]
   },
   {
@@ -129,11 +132,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import datasets\n",
     "import pandas as pd\n",
     "import requests\n",
+    "from sklearn import datasets\n",
     "\n",
-    "model_server_url = \"http://localhost:7000\""
+    "model_server_url = \"http://localhost:7001\"\n",
+    "model_name = \"mlflow-model\"\n",
+    "\n",
+    "model_server_url = \"http://localhost:7000\"\n",
+    "model_name = \"diabetes-model\""
    ]
   },
   {
@@ -163,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wait_until_model_ready(model_server_url)"
+    "wait_until_model_ready(model_server_url, model_name)"
    ]
   },
   {
@@ -175,7 +182,10 @@
    "source": [
     "response = requests.post(\n",
     "    f\"{model_server_url}/invocations\",\n",
-    "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": diabetes_result.values.tolist()}},\n",
+    "    json={\n",
+    "        \"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": diabetes_result.to_numpy().tolist()},\n",
+    "    },\n",
+    "    timeout=5,\n",
     ")\n",
     "response_data = response.json()\n",
     "# print(json.dumps(response_data, indent=4))\n",
@@ -452,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
