set python version to 3.10

--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -136,9 +136,11 @@
     "import requests\n",
     "from sklearn import datasets\n",
     "\n",
+    "# Manual \"manual-diabetes-model\" build with \"dev\" model.\n",
     "model_server_url = \"http://localhost:7001\"\n",
     "model_name = \"mlflow-model\"\n",
     "\n",
+    "# Build by MLflow \"mlflow-diabetes-model\"\n",
     "model_server_url = \"http://localhost:7000\"\n",
     "model_name = \"diabetes-model\""
    ]
