change ruff rules.

--- a/src/notebooks/02-diabetes-model.ipynb
+++ b/src/notebooks/02-diabetes-model.ipynb
@@ -693,7 +693,7 @@
     "\n",
     "response = requests.post(\n",
     "    f\"{model_server_url}/invocations\",\n",
-    "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": first_last.values.tolist()}},\n",
+    "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": first_last.to_numpy().tolist()}},\n",
     ")\n",
     "\n",
     "print(json.dumps(response.json(), indent=4))"
@@ -718,7 +718,9 @@
     "\n",
     "response = requests.post(\n",
     "    f\"{model_server_url}/invocations\",\n",
-    "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": diabetes_result.values.tolist()}},\n",
+    "    json={\n",
+    "        \"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": diabetes_result.to_numpy().tolist()}\n",
+    "    },\n",
     ")\n",
     "response_data = response.json()\n",
     "# print(json.dumps(response_data, indent=4))\n",
